@@ -10,9 +10,9 @@ bin/script_must_be_unique_runner
 Build.PL
 Changes
 data/config_files/function_list_central.yml
-data/config_files/function_list_gclp.yml
-data/config_files/function_list_olb.yml
-data/config_files/function_list_qc_run.yml
+data/config_files/function_list_central_gclp.yml
+data/config_files/function_list_central_olb.yml
+data/config_files/function_list_central_qc_run.yml
 data/config_files/function_list_post_qc_review.yml
 data/config_files/function_list_post_qc_review_gclp.yml
 data/config_files/general_values.ini
