@@ -4,6 +4,7 @@ LIST OF CHANGES
  - seq-alignment - P4 and new bwa for older chemistries & forcing mem for alt
    references and GCLP
  - add attribute "gclp" common to analysis and archival scripts
+ - function list config files always contain pipeline module name e.g. central
 
 release 49.6
  - pass RG paramater to illumina2bam
